--- a/config/neat-exp.properties
+++ b/config/neat-exp.properties
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 0 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = true
+gVerbose            = false
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
@@ -54,9 +54,9 @@ gVerbose            = true
 
 # general purpose
 gDisplayMode          = true
-gBatchMode            = false
+gBatchMode            = true
 gPauseMode            = true
-gDisplaySensors       = 2 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
+gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
 gRobotDisplayFocus    = false
 gDisplayGroundCaption = true
@@ -97,7 +97,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 50
+gInitialNumberOfRobots = 300
 gSensorRange           = 20
 
 gExtendedSensoryInputs = true 
@@ -110,8 +110,9 @@ gLocomotionMode        = 0    #
 # Neural networks
 
 
+gFitnessFunction = 2 # 0: locomotion, 1: collection, 2: forraging 
+gControllerType  = 0 # 0 = NEAT, 1 = FFNN
 
-gControllerType  = 1 		# 0 = NEAT, 1 = FFNN
 
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
@@ -119,13 +120,13 @@ gUpdateSigmaStep = 0.35
 gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 100
-gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
+gEvaluationTime  = 200
+gMaxIt           = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
                           # Eg. for 250 generations and 1000 sim tics/gen 
                           #  250000
 
 
-gFitnessFunction = 2 # 0: locomotion, 1: collection, 2: forraging 
+
 
 
 gSynchronization = true  # sync generations 
@@ -156,7 +157,7 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 50
+gNbOfPhysicalObjects    = 150
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
@@ -164,15 +165,15 @@ gPhysicalObjectsRedraw  = true
 gPhysicalObjectDefaultType = 1
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 4
-gPhysicalObjectDefaultFootprintRadius = 10
+gPhysicalObjectDefaultRadius = 3
+gPhysicalObjectDefaultFootprintRadius = 7
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
-gPhysicalObjectDefaultSolid_w = 8
-gPhysicalObjectDefaultSolid_h = 8
-gPhysicalObjectDefaultSoft_w = 11
-gPhysicalObjectDefaultSoft_h = 11
+gPhysicalObjectDefaultSolid_w = 5
+gPhysicalObjectDefaultSolid_h = 5
+gPhysicalObjectDefaultSoft_w = 9
+gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
