fixed loco fitness + run script

--- a/config/neat-small.properties
+++ b/config/neat-small.properties
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 0 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = true
+gVerbose            = false
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
@@ -97,7 +97,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 3
+gInitialNumberOfRobots = 5
 gSensorRange           = 20
 
 gExtendedSensoryInputs = true 
