--- a/config/template.properties
+++ b/config/template.properties
@@ -1,41 +1,16 @@
-#
-# Demo: Neat - foraging
-# title: TopEDO 
-# date: 2014-10-03
-#
-
-# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
--=
-
-#
-# Main simulation parameters
-#
-
-
-
-
-
-# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-#
-# general file information
-#
-
 ConfigurationLoaderObjectName = neatestConfigurationLoader
 gRandomSeed = -1 #123456
-
 
 # environment images
 gForegroundImageFilename   = data/env_400_foreground.png
 gEnvironmentImageFilename  = data/env_400_environment.png
 gBackgroundImageFilename   = data/env_400_environment.png
 gGroundSensorImageFilename = data/env_400_background-nests.png
-gScreenWidth  = 400
-gScreenHeight = 400
+gScreenWidth               = 400
+gScreenHeight              = 400
 
-# robot images 
-gRobotMaskImageFilename  = data/minirobot-mask.png
-gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
+gRobotMaskImageFilename    = data/minirobot-mask.png
+gRobotSpecsImageFilename   = data/minirobot-specs-12sensors.png
 
 # Loging
 gLogCommentText     = (under-development)
@@ -44,17 +19,9 @@ gSnapshotsFrequency = 0
 gGenomeLogFolder    = logs/genomes/
 gVerbose            = true
 
-#gLogFilename = logs/log.txt # if commented, create a time-stamped file.
-
-# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
-# 
-# Other parameters
-#
-
 # general purpose
 gDisplayMode          = true
-gBatchMode            = false
+gBatchMode            = true
 gPauseMode            = true
 gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
@@ -104,15 +71,12 @@ gExtendedSensoryInputs = true
 gNumberOfRobotGroups   = 1
 gLocomotionMode        = 0    # 
 
-
-
-
 # Neural networks
 
 
-gFitnessFunction = 2 # 0: locomotion, 1: collection, 2: forraging 
+gFitnessFunction = 0 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType  = 1 # 0 = NEAT, 1 = FFNN
-
+gSelectionPressure = 0.0 # 0 (random) -> 1.0 (best)
 
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
@@ -124,9 +88,6 @@ gEvaluationTime  = 200
 gMaxIt           = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
                           # Eg. for 250 generations and 1000 sim tics/gen 
                           #  250000
-
-
-
 
 
 gSynchronization = true  # sync generations 
@@ -175,5 +136,6 @@ gPhysicalObjectDefaultSolid_h = 5
 gPhysicalObjectDefaultSoft_w = 9
 gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
+
 
 
