Prune extinct branches in puregenome2graph

--- a/config/pureNeat.properties
+++ b/config/pureNeat.properties
@@ -11,15 +11,15 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 5 # 3000
+gInitialNumberOfRobots = 50 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gNbOfLandmarks = 0 
-gNbOfPhysicalObjects = 0
+gNbOfPhysicalObjects = 150
 
 gEvaluationTime =   2000
-gMaxIt = 22000 #-1
+gMaxIt = 1002000 #-1
 
 gSensorRange = 20
 gSynchronization = true # not implemented
@@ -33,7 +33,7 @@ gVerbose = true
 
 gSelectionMethod = 1
 
-gFitness = 1 #0 Foraging, 1 Floreano's locomotion fitness
+gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
 
 gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 
@@ -51,13 +51,13 @@ gRobotMaskImageFilename = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-8sensors.png
 
 # environment: 400, 600, 1000, 1400x800, 4000
-gForegroundImageFilename = data/env_100_foreground.png
-gEnvironmentImageFilename = data/env_100_environment.png
-gBackgroundImageFilename =  data/env_100_background.png
-gGroundSensorImageFilename = data/env_100_background.png
+gForegroundImageFilename = data/env_512_foreground.png
+gEnvironmentImageFilename = data/env_512_environment.png
+gBackgroundImageFilename =  data/env_512_background.png
+gGroundSensorImageFilename = data/env_512_zones.png
 
-gScreenWidth = 100
-gScreenHeight = 100
+gScreenWidth = 512
+gScreenHeight = 512
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 gLogCommentText = (under-development)
@@ -144,14 +144,14 @@ gSigmaMax = 1.0
 
 # =-=-=-=-=-=
 # parameters wrt. pure neat
-mutate_only_prob = 0.0
+mutate_only_prob = 0.7
 mutate_link_weights_prob = 1.0
 mutate_toggle_enable_prob = 0.30
 mutate_gene_reenable_prob = 0.30
 mutate_add_node_prob = 0.15
 mutate_add_link_prob = 0.20
-mate_only_prob = 1.0
-recur_only_prob  = 0.2
+mate_only_prob = 0.9
+recur_only_prob  = 0.1
 newstructure_tries = 20
 
 # Physical objects
