modified handeling of sensor and fitness

--- a/config/neat-exp.properties
+++ b/config/neat-exp.properties
@@ -29,7 +29,7 @@ gRandomSeed = -1 #123456
 gForegroundImageFilename   = data/env_400_foreground.png
 gEnvironmentImageFilename  = data/env_400_environment.png
 gBackgroundImageFilename   = data/env_400_environment.png
-gGroundSensorImageFilename = data/env_400_background-nests.png
+gGroundSensorImageFilename = data/env_400_background.png
 gScreenWidth  = 400
 gScreenHeight = 400
 
@@ -97,7 +97,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 1
+
 gSensorRange           = 20
 
 gExtendedSensoryInputs = true 
@@ -110,20 +110,12 @@ gLocomotionMode        = 0    #
 # Neural networks
 
 
-gFitnessFunction = 2 # 0: locomotion, 1: collection, 2: forraging 
-gControllerType  = 1 # 0 = NEAT, 1 = FFNN
-
-
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
-gSigmaRef        = 0.3
+
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 200
-gMaxIt           = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
-                          # Eg. for 250 generations and 1000 sim tics/gen 
-                          #  250000
 
 
 
@@ -157,7 +149,7 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 150
+
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
@@ -175,5 +167,18 @@ gPhysicalObjectDefaultSolid_h = 5
 gPhysicalObjectDefaultSoft_w = 9
 gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
+
+
+
+gNbOfPhysicalObjects    = 150
+gInitialNumberOfRobots  = 1
+gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
+gControllerType         = 1 # 0 = NEAT, 1 = FFNN
+gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
+gSigmaRef               = 0.3
+gEvaluationTime         = 200
+gMaxIt                  = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
+                                # Eg. for 250 generations and 1000 sim tics/gen 
+                                #  250000
 
 
