--- a/config/template.properties
+++ b/config/template.properties
@@ -1,16 +1,41 @@
+#
+# Demo: Neat - foraging
+# title: TopEDO 
+# date: 2014-10-03
+#
+
+# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+-=
+
+#
+# Main simulation parameters
+#
+
+
+
+
+
+# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+
+#
+# general file information
+#
+
 ConfigurationLoaderObjectName = neatestConfigurationLoader
 gRandomSeed = -1 #123456
 
-# environment images
-gForegroundImageFilename   = data/env_400_foreground.png
-gEnvironmentImageFilename  = data/env_400_environment.png
-gBackgroundImageFilename   = data/env_400_environment.png
-gGroundSensorImageFilename = data/env_400_background-nests.png
-gScreenWidth               = 400
-gScreenHeight              = 400
 
-gRobotMaskImageFilename    = data/minirobot-mask.png
-gRobotSpecsImageFilename   = data/minirobot-specs-12sensors.png
+# environment images
+gForegroundImageFilename   = data/littleEnvironment.png
+gEnvironmentImageFilename  = data/littleEnvironment.png
+gBackgroundImageFilename   = data/littleEnvironment.png
+gGroundSensorImageFilename = data/littleEnvironment.png
+gScreenWidth  = 512
+gScreenHeight = 512
+
+# robot images 
+gRobotMaskImageFilename  = data/minirobot-mask.png
+gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
 
 # Loging
 gLogCommentText     = (under-development)
@@ -19,9 +44,17 @@ gSnapshotsFrequency = 0
 gGenomeLogFolder    = logs/genomes/
 gVerbose            = true
 
+#gLogFilename = logs/log.txt # if commented, create a time-stamped file.
+
+# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+
+# 
+# Other parameters
+#
+
 # general purpose
 gDisplayMode          = true
-gBatchMode            = true
+gBatchMode            = false
 gPauseMode            = true
 gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
@@ -64,30 +97,28 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 1
+
 gSensorRange           = 20
 
-gExtendedSensoryInputs = true 
+
 gNumberOfRobotGroups   = 1
 gLocomotionMode        = 0    # 
+
+
+
 
 # Neural networks
 
 
-gFitnessFunction = 0 # 0: locomotion, 1: collection, 2: forraging 
-gControllerType  = 1 # 0 = NEAT, 1 = FFNN
-gSelectionPressure = 0.0 # 0 (random) -> 1.0 (best)
-
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
-gSigmaRef        = 0.3
+
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 200
-gMaxIt           = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
-                          # Eg. for 250 generations and 1000 sim tics/gen 
-                          #  250000
+
+
+
 
 
 gSynchronization = true  # sync generations 
@@ -118,7 +149,7 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 150
+
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
@@ -137,5 +168,18 @@ gPhysicalObjectDefaultSoft_w = 9
 gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
+
+
+
+gNbOfPhysicalObjects    = 0
+gInitialNumberOfRobots  = 1
+gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
+gControllerType         = 1 # 0 = NEAT, 1 = FFNN
+gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
+gSigmaRef               = 0.3
+gEvaluationTime         = 200
+gMaxIt                  = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
+                                # Eg. for 250 generations and 1000 sim tics/gen 
+                                #  250000
 
 
