modified handeling of sensor and fitness

--- a/config/template.properties
+++ b/config/template.properties
@@ -54,7 +54,7 @@ gVerbose            = true
 
 # general purpose
 gDisplayMode          = true
-gBatchMode            = false
+gBatchMode            = true
 gPauseMode            = true
 gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
