--- a/config/template.properties
+++ b/config/template.properties
@@ -104,7 +104,7 @@ gSensorRange           = 20
 gNumberOfRobotGroups   = 1
 gLocomotionMode        = 0    # 
 
-
+gExtendedSensoryInputs = false
 
 
 # Neural networks
@@ -116,11 +116,6 @@ gUpdateSigmaStep = 0.35
 
 gSigmaMax        = 1.0
 
-
-
-
-
-
 gSynchronization = true  # sync generations 
 
 gNeatParameters  = prj/neatest/src/explo.ne
@@ -129,7 +124,6 @@ gNeatParameters  = prj/neatest/src/explo.ne
 # =-=-=-=-=-= Objects in the environment
 
 gLocationFinderMaxNbOfTrials = 1000 # 100?
-
 
 # Robot energy
 
