--- a/config/templateIrace.properties
+++ b/config/templateIrace.properties
@@ -17,14 +17,14 @@ gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check cod
 gNbOfLandmarks = 0 
 gNbOfPhysicalObjects = 0
 
-gEvaluationTime =   200 #Default
-gMaxIt = 22000 #-1
+gEvaluationTime =   500 #Default
+gMaxIt = 202000 #-1
 
 gSensorRange = 20
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
