--- a/config/templateIrace.properties
+++ b/config/templateIrace.properties
@@ -18,13 +18,13 @@ gNbOfLandmarks = 0
 gNbOfPhysicalObjects = 0
 
 gEvaluationTime =   500 #Default
-gMaxIt = 202000 #-1
+gMaxIt = 102000 #-1
 
 gSensorRange = 20
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = false
+gBatchMode = true
 
 gRandomSeed = -1
 
