weight distance stats

--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -26,12 +26,12 @@ gRandomSeed = -1 #123456
 
 
 # environment images
-gForegroundImageFilename   = data/env_400_foreground.png
-gEnvironmentImageFilename  = data/env_400_environment.png
-gBackgroundImageFilename   = data/env_400_environment.png
-gGroundSensorImageFilename = data/env_400_background.png
-gScreenWidth  = 400
-gScreenHeight = 400
+gForegroundImageFilename   = data/littleEnvironment.png
+gEnvironmentImageFilename  = data/littleEnvironment.png
+gBackgroundImageFilename   = data/littleEnvironment.png
+gGroundSensorImageFilename = data/littleEnvironment.png
+gScreenWidth  = 512
+gScreenHeight = 512
 
 # robot images 
 gRobotMaskImageFilename  = data/minirobot-mask.png
@@ -43,6 +43,7 @@ gSnapshots          = false
 gSnapshotsFrequency = 0 
 gGenomeLogFolder    = logs/genomes/
 gVerbose            = true
+
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -55,7 +56,7 @@ gVerbose            = true
 gDisplayMode          = true
 gBatchMode            = false
 gPauseMode            = true
-gDisplaySensors       = 2 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
+gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
 gRobotDisplayFocus    = false
 gDisplayGroundCaption = true
@@ -96,32 +97,24 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 50
+
 gSensorRange           = 20
 
-gExtendedSensoryInputs = true 
+
 gNumberOfRobotGroups   = 1
 gLocomotionMode        = 0    # 
 
-
+gExtendedSensoryInputs = false
 
 
 # Neural networks
 
-
-
-gControllerType  = 1 		# 0 = NEAT, 1 = FFNN
-
+gMaturationTime  = 0.8    # percentage of the evaluation pariod
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
-gSigmaRef        = 0.3
-gSigmaMax        = 1.0
 
-gEvaluationTime  = 100
-gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
-                          # Eg. for 250 generations and 1000 sim tics/gen 
-                          #  250000
+gSigmaMax        = 1.0
 
 gSynchronization = true  # sync generations 
 
@@ -131,7 +124,6 @@ gNeatParameters  = prj/neatest/src/explo.ne
 # =-=-=-=-=-= Objects in the environment
 
 gLocationFinderMaxNbOfTrials = 1000 # 100?
-
 
 # Robot energy
 
@@ -151,7 +143,7 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 0
+
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
@@ -159,142 +151,29 @@ gPhysicalObjectsRedraw  = true
 gPhysicalObjectDefaultType = 1
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 4
-gPhysicalObjectDefaultFootprintRadius = 10
+gPhysicalObjectDefaultRadius = 3
+gPhysicalObjectDefaultFootprintRadius = 7
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
-gPhysicalObjectDefaultSolid_w = 8
-gPhysicalObjectDefaultSolid_h = 8
-gPhysicalObjectDefaultSoft_w = 11
-gPhysicalObjectDefaultSoft_h = 11
+gPhysicalObjectDefaultSolid_w = 5
+gPhysicalObjectDefaultSolid_h = 5
+gPhysicalObjectDefaultSoft_w = 9
+gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 
-# =-=-=-=-=-=
 
-# landmarks. Check gNbOfLandmarks for max value.
-#landmark[0].x = 850
-#landmark[0].y = 800
-
-# Robots. Check gInitialNumberOfRobots for max value.
-#robot[0].x = 100
-#robot[0].y = 100
-#robot[0].orientation = 90			# 0...359, clockwise -- default is 0.
-#robot[0].groupId=0						# default is 0 anyway
-
-#robot[256].x = 50
-#robot[256].y = 50
-#robot[256].orientation = 90			# 0...359, clockwise -- default is 0.
-#robot[256].groupId=0						# default is 0 anyway
-
-# Physical objects. Check gNbOfPhysicalObjects for max value.
-# 0: default object ; 1: energy item ; 2: gate object ; 3: switch object
-
-#physicalObject[0].type=1 # energy item
-#physicalObject[0].x = 300 # if commented, choose random location
-#physicalObject[0].y = 300
-#physicalObject[0].radius=80
-#physicalObject[0].footprintRadius=90
-#physicalObject[0].displayColorRed=255
-#physicalObject[0].displayColorGreen=255
-#physicalObject[0].displayColorBlue=0
-#physicalObject[0].visible=true
-#physicalObject[0].relocate=true
-#physicalObject[0].overwrite=false
-#physicalObject[0].regrowTimeMax=0
-#physicalObject[0].energy=1000
-#physicalObject[0].energyMode=2
-
-#physicalObject[0].type=2 # gate
-#physicalObject[0].x = 800
-#physicalObject[0].y = 762
-#physicalObject[0].solid_w=9
-#physicalObject[0].solid_h=118
-#physicalObject[0].soft_w=0
-#physicalObject[0].soft_h=0
-#physicalObject[0].displayColorRed=128
-#physicalObject[0].displayColorGreen=128
-#physicalObject[0].displayColorBlue=255
-#physicalObject[0].visible=true
-#physicalObject[0].relocate=false
-#physicalObject[0].overwrite=false
-#physicalObject[0].regrowTimeMax=500		# respawn after N iterations
-
-#physicalObject[1].type=3 # switch
-#physicalObject[1].x = 400
-#physicalObject[1].y = 200
-#physicalObject[1].radius=8
-#physicalObject[1].footprintRadius=30
-#physicalObject[1].displayColorRed=0
-#physicalObject[1].displayColorGreen=0
-#physicalObject[1].displayColorBlue=255
-#physicalObject[1].visible=true
-#physicalObject[1].regrowTimeMax=50			# respawn after N iterat#ions
-#physicalObject[1].relocate=false
-#physicalObject[1].overwrite=false
-#physicalObject[1].sendMessageTo=0 			# send message to object #1 (ie. open gate)
-
-#physicalObject[2].type=3 # switch
-#physicalObject[2].x = 300
-#physicalObject[2].y = 800
-#physicalObject[2].radius=8
-#physicalObject[2].footprintRadius=30
-#physicalObject[2].displayColorRed=0
-#physicalObject[2].displayColorGreen=0
-#physicalObject[2].displayColorBlue=255
-#physicalObject[2].visible=true
-#physicalObject[2].regrowTimeMax=80			# respawn after N iterat#ions
-#physicalObject[2].relocate=false
-#physicalObject[2].overwrite=false
-#physicalObject[2].sendMessageTo=3 			# send message to object #1 (ie. open gate)
-
-#physicalObject[3].type=2 # gate
-#physicalObject[3].x = 809
-#physicalObject[3].y = 762
-#physicalObject[3].solid_w=9
-#physicalObject[3].solid_h=118
-#physicalObject[3].soft_w=0
-#physicalObject[3].soft_h=0
-#physicalObject[3].displayColorRed=255
-#physicalObject[3].displayColorGreen=128
-#physicalObject[3].displayColorBlue=128
-#physicalObject[3].visible=true
-#physicalObject[3].relocate=false
-#physicalObject[3].overwrite=false
-#physicalObject[3].regrowTimeMax=30000 		# respawn after N iterations
-
-#physicalObject[1].type=2 # gate
-#physicalObject[1].x = 795
-#physicalObject[1].y = 703
-#physicalObject[1].solid_w=9
-#physicalObject[1].solid_h=118
-#physicalObject[1].soft_w=0
-#physicalObject[1].soft_h=0
-#physicalObject[1].displayColorRed=128
-#physicalObject[1].displayColorGreen=128
-#physicalObject[1].displayColorBlue=255
-#physicalObject[1].visible=true
-#physicalObject[1].relocate=false
-#physicalObject[1].overwrite=false
-#physicalObject[1].regrowTimeMax=800 		# respawn after N iterations
-
-#physicalObject[2].type=3 # switch
-#physicalObject[2].x = 878
-#physicalObject[2].y = 92
-#physicalObject[2].radius=8
-#physicalObject[2].footprintRadius=14
-#physicalObject[2].displayColorRed=0
-#physicalObject[2].displayColorGreen=0
-#physicalObject[2].displayColorBlue=255
-#physicalObject[2].visible=true
-#physicalObject[2].regrowTimeMax=850			# respawn after N iterations
-#physicalObject[2].relocate=false
-#physicalObject[2].overwrite=false
-#physicalObject[2].sendMessageTo=1 			# send message to object #1 (ie. open gate)
+gNbOfPhysicalObjects    = 0
+gInitialNumberOfRobots  = 100
+gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
+gControllerType         = 1 # 0 = NEAT, 1 = FFNN
+gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
+gSigmaRef               = 0.3
+gEvaluationTime         = 200
+gMaxIt                  = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
+                                # Eg. for 250 generations and 1000 sim tics/gen 
+                                #  250000
 
 
-gBatchMode =true
-
-gInitialNumberOfRobots = 300
