--- a/config/template.properties
+++ b/config/template.properties
@@ -109,7 +109,7 @@ gExtendedSensoryInputs = false
 
 # Neural networks
 
-
+gMaturationTime  = 0.8    # percentage of the evaluation pariod
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
