Template irace odneat

--- a/config/templateOdneatIrace.properties
+++ b/config/templateOdneatIrace.properties
@@ -24,7 +24,7 @@ gSensorRange = 30
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
@@ -181,6 +181,23 @@ gPhysicalObjectDefaultRegrowTimeMax = 1
 
 gEnergyItemDefaultMode = 0
 gEnergyItemDefaultInit = 100
+
+
+
+#odNeat parameters
+
+gDefaultInitialEnergy = 100
+gEnergyThreshold = 0
+
+gMaturationPeriod = 50
+gMaxPopSize = 20
+gCompatThreshold = 3.0
+
+gTabuTimeout = 15
+gTabuThreshold = 1.0
+
+gEnergItemValue = 1.0;
+
 
 #Parameters tuned (irace)
 
