OdNeat fixed. Works as a charm

--- a/config/debugOdneat.properties
+++ b/config/debugOdneat.properties
@@ -17,8 +17,8 @@ gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check cod
 gNbOfLandmarks = 0 
 gNbOfPhysicalObjects = 0
 
-gEvaluationTime =   500 #Default
-gMaxIt = 102000 #-1
+gEvaluationTime =   100 #Default
+gMaxIt = 200000 #-1
 
 gSensorRange = 30
 gSynchronization = true # not implemented
@@ -32,7 +32,7 @@ gVerbose = true
 
 gSelectionMethod = 1
 
-gFitness = 1 #0 Foraging, 1 Floreano's locomotion fitness
+gFitness = 1 #0 Foraging, 1 locomotion fitness
 
 gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 
@@ -53,10 +53,18 @@ gRobotSpecsImageFilename = data/minirobot-specs-8sensors.png
 gForegroundImageFilename = data/env_512_foreground.png
 gEnvironmentImageFilename = data/env_512_environment.png
 gBackgroundImageFilename =  data/env_512_background.png
-gGroundSensorImageFilename = data/env_512_zones.png
+gGroundSensorImageFilename = data/env_512_background.png
 
 gScreenWidth = 512
 gScreenHeight = 512
+
+#gForegroundImageFilename = data/env_100_foreground.png
+#gEnvironmentImageFilename = data/env_100_environment.png
+#gBackgroundImageFilename =  data/env_100_background.png
+#gGroundSensorImageFilename = data/env_100_background.png
+
+#gScreenWidth = 100
+#gScreenHeight = 100
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 gLogCommentText = (under-development)
@@ -193,7 +201,7 @@ gMaturationPeriod = 50
 gMaxPopSize = 20
 gCompatThreshold = 3.0
 
-gTabuTimeout = 15
+gTabuTimeout = 5
 gTabuThreshold = 1.0
 
 gEnergItemValue = 1.0
@@ -201,13 +209,13 @@ gFitnessFreq = 10
 
 #Parameters tuned (irace)
 
-#mutate_only_prob = 0.7912
-#mutate_link_weights_prob = 0.2359
+mutate_only_prob = 0.7912
+mutate_link_weights_prob = 0.2359
 #mutate_toggle_enable_prob = 0.0340
 #mutate_gene_reenable_prob = 0.6728
-#mutate_add_node_prob = 0.4832
-#mutate_add_link_prob = 0.5644
-#mate_only_prob = 0.9968
-#recur_only_prob  = 0.6085
-#gSigmaRef = 0.1584
+mutate_add_node_prob = 0.4832
+mutate_add_link_prob = 0.5644
+mate_only_prob = 0.9968
+recur_only_prob  = 0.6085
+gSigmaRef = 0.1584
 
