--- a/config/debugGcOdneat.properties
+++ b/config/debugGcOdneat.properties
@@ -26,7 +26,7 @@ gSynchronization = true # not implemented
 gDisplayMode = 0
 gBatchMode = false
 
-gRandomSeed = 1420813055
+gRandomSeed = -1
 
 gVerbose = true
 
