--- a/config/debugGcOdneat.properties
+++ b/config/debugGcOdneat.properties
@@ -18,7 +18,7 @@ gNbOfLandmarks = 0
 gNbOfPhysicalObjects = 0
 
 gEvaluationTime =   100 #Default
-gMaxIt = 200000 #-1
+gMaxIt = 2000000 #-1
 
 gSensorRange = 30
 gSynchronization = true # not implemented
