--- a/config/debugGcOdneat.properties
+++ b/config/debugGcOdneat.properties
@@ -24,7 +24,7 @@ gSensorRange = 30
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = false
+gBatchMode = true
 
 gRandomSeed = -1
 
