Fitness measure every n iterations

--- a/config/debugGcOdneat.properties
+++ b/config/debugGcOdneat.properties
@@ -10,7 +10,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 120 #100
+gInitialNumberOfRobots = 2900 #100
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -24,7 +24,7 @@ gSensorRange = 30
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
