Configuration files for tuning of all experiments

--- a/config/templateGcForIrace.properties
+++ b/config/templateGcForIrace.properties
@@ -1,5 +1,5 @@
 #
-# Demo: gc-navig
+# Demo: gc-forag
 # title: odneat
 # date: 2014-10-03
 #
@@ -10,15 +10,15 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 100 #100
+gInitialNumberOfRobots = 100 
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gNbOfLandmarks = 0 
-gNbOfPhysicalObjects = 0
+gNbOfPhysicalObjects = 75
 
 gEvaluationTime =   100 #Default
-gMaxIt = 40000 #-1
+gMaxIt = 60000 #-1
 
 gSensorRange = 30
 gSynchronization = true # not implemented
@@ -32,7 +32,7 @@ gVerbose = true
 
 gSelectionMethod = 1
 
-gFitness = 1 #0 Foraging, 1 locomotion fitness
+gFitness = 0 #0 Foraging, 1 locomotion fitness
 
 gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 
@@ -175,8 +175,8 @@ gPhysicalObjectsRedraw = false
 gPhysicalObjectDefaultType = 3
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 2
-gPhysicalObjectDefaultFootprintRadius = 6
+gPhysicalObjectDefaultRadius = 6
+gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
@@ -187,9 +187,15 @@ gPhysicalObjectDefaultSoft_h = 22
 gphysicalObjectDefaultSendMessageTo=-1 
 gPhysicalObjectDefaultRegrowTimeMax = 1
 
-gEnergyItemDefaultMode = 0
+gEnergyItemDefaultMode = 1 //Respawn in a fixed amount of time and  fixed
 gEnergyItemDefaultInit = 100
 
+##NOT USED
+# Landmarks (energy points)
+
+VisibleLandmarks = true
+gLandmarkRadius = 10.0
+##
 
 
 #odNeat parameters
