--- a/config/templateGcNavIrace.properties
+++ b/config/templateGcNavIrace.properties
@@ -10,7 +10,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 100 #100
+gInitialNumberOfRobots = 100 
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -175,8 +175,8 @@ gPhysicalObjectsRedraw = false
 gPhysicalObjectDefaultType = 3
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 2
-gPhysicalObjectDefaultFootprintRadius = 6
+gPhysicalObjectDefaultRadius = 6
+gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
