--- a/config/templateRdmNavIrace.properties
+++ b/config/templateRdmNavIrace.properties
@@ -1,5 +1,5 @@
 #
-# Demo: gc-navig
+# Demo: random-navig
 # title: odneat
 # date: 2014-10-03
 #
@@ -10,7 +10,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 100 #100
+gInitialNumberOfRobots = 100 
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -42,7 +42,7 @@ gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 # general file information
 #
 
-ConfigurationLoaderObjectName = odNeatGCConfigurationLoader
+ConfigurationLoaderObjectName = odNeatRandomConfigurationLoader
 gGenomeLogFolder = logs/genomes/
 gEvolutionLogFile = logs/odneat.log
 
@@ -175,8 +175,8 @@ gPhysicalObjectsRedraw = false
 gPhysicalObjectDefaultType = 3
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 2
-gPhysicalObjectDefaultFootprintRadius = 6
+gPhysicalObjectDefaultRadius = 6
+gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
