phyl script modified

--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -109,7 +109,7 @@ gExtendedSensoryInputs = false
 
 # Neural networks
 
-gMaturationTime  = 0.8    # percentage of the evaluation pariod
+gMaturationTime  = 0.0    # percentage of the evaluation pariod
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
@@ -166,7 +166,7 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 gNbOfPhysicalObjects    = 0
-gInitialNumberOfRobots  = 10
+gInitialNumberOfRobots  = 9
 gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType         = 1 # 0 = NEAT, 1 = FFNN
 gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
@@ -175,5 +175,53 @@ gEvaluationTime         = 200
 gMaxIt                  = 2000 # sim time (generation = gMaxIt/gEvaluationTime)
                                 # Eg. for 250 generations and 1000 sim tics/gen 
                                 #  250000
+
+
+#robot[0].x = 100
+#robot[0].y = 100
+#robot[0].orientation = 90	# 0...359, clockwise -- default is 0.
+#robot[0].groupId=0	        # default is 0 anyway
+
+
+
+
+robot[0].x = 50
+robot[0].y = 50
+robot[0].orientation = 90
+
+robot[1].x = 55
+robot[1].y = 50
+robot[1].orientation = 90
+
+robot[2].x = 45
+robot[2].y = 50
+robot[2].orientation = 90
+
+robot[3].x = 45
+robot[3].y = 55
+robot[3].orientation = 90
+
+robot[4].x = 50
+robot[4].y = 55
+robot[4].orientation = 90
+
+robot[5].x = 55
+robot[5].y = 55
+robot[5].orientation = 90
+
+robot[6].x = 45
+robot[6].y = 45
+robot[6].orientation = 90
+
+robot[7].x = 50
+robot[7].y = 45
+robot[7].orientation = 90
+
+robot[8].x = 55
+robot[8].y = 45
+robot[8].orientation = 90
+
+
+
 
 
