--- a/config/templateRdmForIrace.properties
+++ b/config/templateRdmForIrace.properties
@@ -210,6 +210,6 @@ gCompatThreshold = 3.0
 gTabuTimeout = 50
 gTabuThreshold = 1.0
 
-gEnergItemValue = 1.0
+gEnergyItemValue = 10.0
 gFitnessFreq = 10
 
