--- a/config/gcNavTune.properties
+++ b/config/gcNavTune.properties
@@ -204,7 +204,7 @@ gCompatThreshold = 3.0
 gTabuTimeout = 50
 gTabuThreshold = 1.0
 
-gEnergItemValue = 1.0
+gEnergyItemValue = 1.0
 gFitnessFreq = 10
 
 #Tuned parameters
