--- a/config/gcForTune.properties
+++ b/config/gcForTune.properties
@@ -213,6 +213,13 @@ gTabuThreshold = 1.0
 gEnergyItemValue = 10.0
 gFitnessFreq = 10
 
-gUpdateGC = false
-
-
+#Tuned
+gSigmaRef = 1.606
+mutate_only_prob = 0.752 
+mutate_link_weights_prob = 0.823
+mutate_add_node_prob = 0.308
+mutate_add_link_prob = 0.175
+mate_only_prob = 0.743
+recur_only_prob  = 0.563
+gMaturationPeriod = 33
+gMaxPopSize = 6
