--- a/config/gcNoUpForTune.properties
+++ b/config/gcNoUpForTune.properties
@@ -215,4 +215,13 @@ gFitnessFreq = 10
 
 gUpdateGC = false
 
-
+#Tuned
+gSigmaRef = 1.982
+mutate_only_prob = 0.641
+mutate_link_weights_prob = 0.517
+mutate_add_node_prob = 0.152
+mutate_add_link_prob = 0.076
+mate_only_prob = 0.884
+recur_only_prob  = 0.847
+gMaturationPeriod = 40
+gMaxPopSize = 6
