--- a/config/odNForTune.properties
+++ b/config/odNForTune.properties
@@ -1,5 +1,5 @@
 #
-# Demo: gc-forag
+# Demo: odN-forag
 # title: odneat
 # date: 2014-10-03
 #
@@ -42,7 +42,7 @@ gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 # general file information
 #
 
-ConfigurationLoaderObjectName = odNeatGCConfigurationLoader
+ConfigurationLoaderObjectName = odNeatConfigurationLoader
 gGenomeLogFolder = logs/genomes/
 gEvolutionLogFile = logs/odneat.log
 
@@ -213,6 +213,13 @@ gTabuThreshold = 1.0
 gEnergyItemValue = 10.0
 gFitnessFreq = 10
 
-gUpdateGC = false
-
-
+#Tuned
+gSigmaRef = 0.62
+mutate_only_prob = 0.784
+mutate_link_weights_prob = 0.864 
+mutate_add_node_prob = 0.162
+mutate_add_link_prob = 0.583
+mate_only_prob = 0.085
+recur_only_prob  =  0.541
+gMaturationPeriod =5
+gMaxPopSize = 6
