--- a/config/rdmForTune.properties
+++ b/config/rdmForTune.properties
@@ -1,5 +1,5 @@
 #
-# Demo: gc-forag
+# Demo: rdm-foraging
 # title: odneat
 # date: 2014-10-03
 #
@@ -10,7 +10,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 100 
+gInitialNumberOfRobots = 100
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -42,7 +42,7 @@ gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 # general file information
 #
 
-ConfigurationLoaderObjectName = odNeatGCConfigurationLoader
+ConfigurationLoaderObjectName = odNeatRandomConfigurationLoader
 gGenomeLogFolder = logs/genomes/
 gEvolutionLogFile = logs/odneat.log
 
@@ -213,6 +213,13 @@ gTabuThreshold = 1.0
 gEnergyItemValue = 10.0
 gFitnessFreq = 10
 
-gUpdateGC = false
-
-
+#Tuned
+gSigmaRef = 0.452
+mutate_only_prob =  0.7
+mutate_link_weights_prob = 0.826
+mutate_add_node_prob = 0.138
+mutate_add_link_prob = 0.248
+mate_only_prob = 0.034
+recur_only_prob  = 0.855
+gMaturationPeriod =43
+gMaxPopSize = 10
