Relaunch experiments navigation

--- a/config/innovForTune.properties
+++ b/config/innovForTune.properties
@@ -1,5 +1,5 @@
 #
-# Demo: odN-forag
+# Demo: innov For Tune
 # title: odneat
 # date: 2014-10-03
 #
@@ -24,11 +24,11 @@ gSensorRange = 30
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
-gVerbose = true
+gVerbose = false
 
 gSelectionMethod = 1
 
