--- a/config/gcNavWithOdNTune.properties
+++ b/config/gcNavWithOdNTune.properties
@@ -24,7 +24,7 @@ gSensorRange = 30
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
