--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -26,12 +26,12 @@ gRandomSeed = -1 #123456
 
 
 # environment images
-gForegroundImageFilename   = data/env_100_foreground.png
-gEnvironmentImageFilename  = data/env_100_environment.png
-gBackgroundImageFilename   = data/env_100_environment.png
-gGroundSensorImageFilename = data/env_100_background.png
-gScreenWidth  = 100
-gScreenHeight = 100
+gForegroundImageFilename   = data/littleEnvironment.png
+gEnvironmentImageFilename  = data/littleEnvironment.png
+gBackgroundImageFilename   = data/littleEnvironment.png
+gGroundSensorImageFilename = data/littleEnvironment.png
+gScreenWidth  = 512
+gScreenHeight = 512
 
 # robot images 
 gRobotMaskImageFilename  = data/minirobot-mask.png
@@ -166,10 +166,10 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 gNbOfPhysicalObjects    = 0
-gInitialNumberOfRobots  = 9
+gInitialNumberOfRobots  = 100
 gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
-gControllerType         = 1 # 0 = NEAT, 1 = FFNN
-gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
+gControllerType         = 0 # 0 = NEAT, 1 = FFNN
+gSelectionPressure      = 0.8 # 0 (random) -> 1.0 (best)
 gSigmaRef               = 0.5
 gEvaluationTime         = 200
 gMaxIt                  = 2000 # sim time (generation = gMaxIt/gEvaluationTime)
@@ -182,44 +182,53 @@ gMaxIt                  = 2000 # sim time (generation = gMaxIt/gEvaluationTime)
 #robot[0].orientation = 90	# 0...359, clockwise -- default is 0.
 #robot[0].groupId=0	        # default is 0 anyway
 
+################################################################################
+# setting for phylo exp 
 
+#gNbOfPhysicalObjects    = 0
+#gInitialNumberOfRobots  = 9
+#gFitnessFunction        = 0 
+#gControllerType         = 1 
+#gSelectionPressure      = 0.0 
+#gSigmaRef               = 0.5
+#gEvaluationTime         = 200
+#gMaxIt                  = 2000 
 
-
-robot[0].x = 50
-robot[0].y = 50
-robot[0].orientation = 90
-
-robot[1].x = 55
-robot[1].y = 50
-robot[1].orientation = 90
-
-robot[2].x = 45
-robot[2].y = 50
-robot[2].orientation = 90
-
-robot[3].x = 45
-robot[3].y = 55
-robot[3].orientation = 90
-
-robot[4].x = 50
-robot[4].y = 55
-robot[4].orientation = 90
-
-robot[5].x = 55
-robot[5].y = 55
-robot[5].orientation = 90
-
-robot[6].x = 45
-robot[6].y = 45
-robot[6].orientation = 90
-
-robot[7].x = 50
-robot[7].y = 45
-robot[7].orientation = 90
-
-robot[8].x = 55
-robot[8].y = 45
-robot[8].orientation = 90
+#robot[0].x = 50
+#robot[0].y = 50
+#robot[0].orientation = 90
+#
+#robot[1].x = 55
+#robot[1].y = 50
+#robot[1].orientation = 90
+#
+#robot[2].x = 45
+#robot[2].y = 50
+#robot[2].orientation = 90
+#
+#robot[3].x = 45
+#robot[3].y = 55
+#robot[3].orientation = 90
+#
+#robot[4].x = 50
+#robot[4].y = 55
+#robot[4].orientation = 90
+#
+#robot[5].x = 55
+#robot[5].y = 55
+#robot[5].orientation = 90
+#
+#robot[6].x = 45
+#robot[6].y = 45
+#robot[6].orientation = 90
+#
+#robot[7].x = 50
+#robot[7].y = 45
+#robot[7].orientation = 90
+#
+#robot[8].x = 55
+#robot[8].y = 45
+#robot[8].orientation = 90
 
 
 
