--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -26,12 +26,12 @@ gRandomSeed = -1 #123456
 
 
 # environment images
-gForegroundImageFilename   = data/littleEnvironment.png
-gEnvironmentImageFilename  = data/littleEnvironment.png
-gBackgroundImageFilename   = data/littleEnvironment.png
-gGroundSensorImageFilename = data/littleEnvironment.png
-gScreenWidth  = 512
-gScreenHeight = 512
+gForegroundImageFilename   = data/env_400_background.png
+gEnvironmentImageFilename  = data/env_400_environment.png
+gBackgroundImageFilename   = data/env_400_background.png
+gGroundSensorImageFilename = data/env_400_background-nests.png
+gScreenWidth  = 400
+gScreenHeight = 400
 
 # robot images 
 gRobotMaskImageFilename  = data/minirobot-mask.png
@@ -138,9 +138,9 @@ gEnergyItemDefaultMode = 0   # see EnergyItem.cpp
 gEnergyItemDefaultInit = 1
 
 # Landmarks
-gNbOfLandmarks   = 0 
-VisibleLandmarks = false
-gLandmarkRadius  = 10.0
+#gNbOfLandmarks   = 0 
+#VisibleLandmarks = false
+#gLandmarkRadius  = 10.0
 
 # Physical objects
 
@@ -165,17 +165,38 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 
-gNbOfPhysicalObjects    = 0
+gNbOfPhysicalObjects    = 150
 gInitialNumberOfRobots  = 100
-gFitnessFunction        = 0 # 0: locomotion, 1: collection, 2: forraging 
+gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType         = 0 # 0 = NEAT, 1 = FFNN
 gSelectionPressure      = 0.8 # 0 (random) -> 1.0 (best)
 gSigmaRef               = 0.5
-gEvaluationTime         = 200
-gMaxIt                  = 2000 # sim time (generation = gMaxIt/gEvaluationTime)
-                                # Eg. for 250 generations and 1000 sim tics/gen 
-                                #  250000
+gEvaluationTime         = 500
+gMaxIt                  = 50000 # sim time (generation=gMaxIt/gEvaluationTime)
+                               # Eg. for 250 generations and 1000 sim tics/gen  
+                               #  250000
 
+gSensorRange     = 60
+
+gNbOfLandmarks   = 4
+VisibleLandmarks = true
+gLandmarkRadius  = 10.0
+
+landmark[0].x = 50
+landmark[0].y = 50
+
+landmark[1].x = 350
+landmark[1].y = 50
+
+landmark[2].x = 84
+landmark[2].y = 306
+
+landmark[3].x = 312
+landmark[3].y = 309
+
+
+#gEvaluationTime = 10000000
+#gMaxIt=200000000
 
 #robot[0].x = 100
 #robot[0].y = 100
