--- a/config/template.properties
+++ b/config/template.properties
@@ -98,7 +98,7 @@ gLocomotionMode             = 0
 
 # Robot sensors 
 
-gSensorRange           = 20
+gSensorRange           = 60
 
 
 gNumberOfRobotGroups   = 1
@@ -137,10 +137,6 @@ gEnergyRefill        = true # robot energy refill
 gEnergyItemDefaultMode = 0   # see EnergyItem.cpp
 gEnergyItemDefaultInit = 1
 
-# Landmarks
-gNbOfLandmarks   = 0 
-VisibleLandmarks = false
-gLandmarkRadius  = 10.0
 
 # Physical objects
 
@@ -164,16 +160,30 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 
-
+gSensorRange            = 60
 gNbOfPhysicalObjects    = 0
 gInitialNumberOfRobots  = 1
 gFitnessFunction        = 1 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType         = 1 # 0 = NEAT, 1 = FFNN
 gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
 gSigmaRef               = 0.3
-gEvaluationTime         = 200
-gMaxIt                  = 20000 # sim time (generation = gMaxIt/gEvaluationTime)
+gEvaluationTime         = 500
+gMaxIt                  = 50000 # sim time (generation = gMaxIt/gEvaluationTime)
                                 # Eg. for 250 generations and 1000 sim tics/gen 
                                 #  250000
 
+gNbOfLandmarks   = 4
+VisibleLandmarks = true
+gLandmarkRadius  = 10.0
 
+landmark[0].x = 50
+landmark[0].y = 50
+
+landmark[1].x = 350
+landmark[1].y = 50
+
+landmark[2].x = 84
+landmark[2].y = 306
+
+landmark[3].x = 312
+landmark[3].y = 309
