corrected template file

--- a/config/template.properties
+++ b/config/template.properties
@@ -26,13 +26,12 @@ gRandomSeed = -1 #123456
 
 
 # environment images
-gForegroundImageFilename   = data/littleEnvironment.png
-gEnvironmentImageFilename  = data/littleEnvironment.png
-gBackgroundImageFilename   = data/littleEnvironment.png
-gGroundSensorImageFilename = data/littleEnvironment.png
-gScreenWidth  = 512
-gScreenHeight = 512
-
+gForegroundImageFilename   = data/env_400_background.png
+gEnvironmentImageFilename  = data/env_400_environment.png
+gBackgroundImageFilename   = data/env_400_background.png
+gGroundSensorImageFilename = data/env_400_background-nests.png
+gScreenWidth  = 400
+gScreenHeight = 400
 # robot images 
 gRobotMaskImageFilename  = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
@@ -109,7 +108,7 @@ gExtendedSensoryInputs = false
 
 # Neural networks
 
-gMaturationTime  = 0.8    # percentage of the evaluation pariod
+gMaturationTime  = 0.5    # percentage of the evaluation pariod
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
 gUpdateSigmaStep = 0.35
@@ -161,16 +160,16 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 gSensorRange            = 60
-gNbOfPhysicalObjects    = 0
-gInitialNumberOfRobots  = 1
-gFitnessFunction        = 1 # 0: locomotion, 1: collection, 2: forraging 
-gControllerType         = 1 # 0 = NEAT, 1 = FFNN
-gSelectionPressure      = 0.0 # 0 (random) -> 1.0 (best)
-gSigmaRef               = 0.3
-gEvaluationTime         = 500
-gMaxIt                  = 50000 # sim time (generation = gMaxIt/gEvaluationTime)
-                                # Eg. for 250 generations and 1000 sim tics/gen 
-                                #  250000
+gNbOfPhysicalObjects    = 150
+gInitialNumberOfRobots  = 100
+gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging 
+gControllerType         = 0 # 0 = NEAT, 1 = FFNN
+gSelectionPressure      = 1.0 # 0 (random) -> 1.0 (best)
+gSigmaRef               = 0.5
+gEvaluationTime         = 1000
+gMaxIt                  = 500000 # sim time (generation=gMaxIt/gEvaluationTime)
+                               # Eg. for 250 generations and 1000 sim tics/gen  
+                               #  250000
 
 gNbOfLandmarks   = 4
 VisibleLandmarks = true
@@ -187,3 +186,4 @@ landmark[2].y = 306
 
 landmark[3].x = 312
 landmark[3].y = 309
+
