fixed object environment

--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -145,7 +145,7 @@ gPhysicalObjectsRedraw  = true
 
 # 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
 gPhysicalObjectDefaultType = 1
-gPhysicalObjectDefaultRelocate = true
+gPhysicalObjectDefaultRelocate = false
 gPhysicalObjectDefaultOverwrite = false
 gPhysicalObjectDefaultRadius = 3
 gPhysicalObjectDefaultFootprintRadius = 7
@@ -161,7 +161,7 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 gSensorRange            = 60
-gNbOfPhysicalObjects    = 100
+gNbOfPhysicalObjects    = 50
 gInitialNumberOfRobots  = 100
 gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType         = 0 # 0 = NEAT, 1 = FFNN
