--- a/config/template.properties
+++ b/config/template.properties
@@ -144,7 +144,7 @@ gPhysicalObjectsRedraw  = true
 
 # 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
 gPhysicalObjectDefaultType = 1
-gPhysicalObjectDefaultRelocate = true
+gPhysicalObjectDefaultRelocate = false
 gPhysicalObjectDefaultOverwrite = false
 gPhysicalObjectDefaultRadius = 3
 gPhysicalObjectDefaultFootprintRadius = 7
@@ -160,7 +160,7 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 gSensorRange            = 60
-gNbOfPhysicalObjects    = 150
+gNbOfPhysicalObjects    = 50
 gInitialNumberOfRobots  = 100
 gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging 
 gControllerType         = 0 # 0 = NEAT, 1 = FFNN
